# apps/api/openapi.json
@@ -338,6 +338,32 @@
           "decisions"
         ]
       }
+    },
+    "/jobs/{id}/proof": {
+      "get": {
+        "operationId": "ProofController_get",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Proof"
+        ]
+      },
+      "post": {
+        "operationId": "ProofController_post",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Proof"
+        ]
+      }
     }
   },
   "info": {
